Add Appwrite project ID, name, and endpoint
Added Appwrite project configuration variables.

--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@ VITE_APPWRITE_STORAGE_ID="68d502d50006de59a7af"
 VITE_APPWRITE_USER_COLLECTION_ID="users"
 VITE_APPWRITE_POST_COLLECTION_ID="posts"
 VITE_APPWRITE_SAVES_COLLECTION_ID="saves"
+
+
+
+NEXT_PUBLIC_APPWRITE_PROJECT_ID = "68d4ea7b0030d9ae8413"
+NEXT_PUBLIC_APPWRITE_PROJECT_NAME = "tiktok-clone"
+NEXT_PUBLIC_APPWRITE_ENDPOINT = "https://fra.cloud.appwrite.io/v1"
+        
